<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/context_download"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/context_copydownloadlink"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/copy_dl_link"
        app:showAsAction="never" />
    <item
        android:id="@+id/context_rename"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/rename"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/context_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/context_move"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/move"
        app:showAsAction="ifRoom" />
</menu>