<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/context_download"
        android:icon="@drawable/ic_action_download_black"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/context_copydownloadlink"
        android:icon="@drawable/ic_action_copy"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/copy_dl_link"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/context_move"
        android:icon="@drawable/ic_action_move_black"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/move"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/context_delete"
        android:icon="@drawable/ic_action_delete_black"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>