<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_open"
        android:icon="@drawable/ic_action_open"
        android:orderInCategory="1"
        android:title="@string/open"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_action_download_white"
        android:orderInCategory="2"
        android:title="@string/download"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_action_delete_white"
        android:orderInCategory="4"
        android:tint="@android:color/black"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

</menu>