<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/dialog_title_putio" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_indidualorzip_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_large"
            android:text="@string/individual_or_zip" />

        <LinearLayout
            android:id="@+id/buttonbar"
            style="@style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_indidualorzip_body">

            <Button
                android:id="@+id/button_indidualorzip_cancel"
                style="@style/ButtonBar.Button.Transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/button_indidualorzip_individual"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individually" />

            <Button
                android:id="@+id/button_indidualorzip_zip"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>