<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="center_horizontal"
	android:orientation="vertical">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="4dp"
		android:gravity="center_horizontal"
		android:text="@string/appbysteven"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/codedwithlove"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:text="@string/notaffiliated"
		android:textAppearance="?android:attr/textAppearanceSmall"/>

	<TextView
		android:id="@+id/text_about_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="6dp"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textSize="12sp"
		tools:text="Version 1.0"/>
</LinearLayout>