<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

  <androidx.appcompat.widget.Toolbar
      android:id="@+id/download_individualorzip_toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:navigationIcon="@drawable/ic_toolbar_nav_close"
      app:title="@string/download_files"
      />

  <TextView
      android:id="@+id/download_individualorzip_body"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:paddingStart="32dp"
      android:paddingEnd="32dp"
      android:text="@string/individual_or_zip"
      android:textAppearance="@style/TextAppearance.AppCompat"
      android:textSize="16sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/download_individualorzip_toolbar"
      />

  <com.stevenschoen.putionew.ButtonBarLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/download_individualorzip_body"
      >

    <Button
        android:id="@+id/download_individualorzip_zip"
        style="@style/Widget.Putio.Button.Unelevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        />

    <Button
        android:id="@+id/download_individualorzip_individual"
        style="@style/Widget.Putio.Button.Unelevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/individually"
        />

  </com.stevenschoen.putionew.ButtonBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
