<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    android:layout_width="wrap_content"    android:layout_height="wrap_content"    android:orientation="vertical">    <include layout="@layout/dialog_title_putio" />    <RelativeLayout        android:layout_width="match_parent"        android:layout_height="match_parent">        <TextView            android:id="@+id/text_removetransfer_body"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_margin="@dimen/padding_large"            android:text="@string/removetransferbody" />        <LinearLayout            android:id="@+id/buttonbar"            style="@style/ButtonBar"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_below="@id/text_removetransfer_body">            <Button                android:id="@+id/button_removetransfer_cancel"                style="@style/ButtonBar.Button.Transparent"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/cancel" />            <Button                android:id="@+id/button_removetransfer_remove"                style="@style/ButtonBar.Button"                android:layout_width="wrap_content"                android:layout_height="wrap_content"                android:text="@string/remove" />        </LinearLayout>    </RelativeLayout></LinearLayout>