<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/holder_addtransfer_url"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/text_addtransfer_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/pasteurls"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/button_addtransfer_cancelurl"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_close" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_addtransfer_extract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/extractwhenfinished" />
</LinearLayout>