<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PutioUtils">

    <TextView
        android:id="@+id/text_confirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large"
        android:text="@string/applychanges"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/buttonbarSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/text_confirmText"
        android:background="?android:attr/dividerHorizontal" />

    <LinearLayout
        android:id="@+id/buttonbar"
        style="@style/Putio.ButtonBar.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonbarSeparator"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_confirm_cancel"
            style="@style/Putio.ButtonBar.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />

        <Button
            android:id="@+id/button_confirm_apply"
            style="@style/Putio.ButtonBar.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply" />
    </LinearLayout>

</RelativeLayout>