<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_about3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/notaffiliated"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_about2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_about3"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/codedwithlove"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_about1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_about2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:gravity="center_horizontal"
        android:text="@string/appbysteven"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/image_about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:contentDescription="Put.io logo"
        android:maxHeight="160dp"
        android:maxWidth="160dp"
        android:src="@drawable/biglogo" />

</RelativeLayout>