<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addtransfer_link_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

  <EditText
      android:id="@+id/addtransfer_link_url"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_marginStart="24dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="56dp"
      android:hint="@string/pasteurls"
      android:importantForAutofill="no"
      android:inputType="textMultiLine|textUri"
      android:lines="2"
      />

  <ImageButton
      android:id="@+id/addtransfer_link_clear"
      android:layout_width="48dp"
      android:layout_height="match_parent"
      android:layout_alignTop="@id/addtransfer_link_url"
      android:layout_alignBottom="@id/addtransfer_link_url"
      android:layout_alignParentEnd="true"
      android:layout_gravity="center_vertical"
      android:layout_marginEnd="4dp"
      android:background="?selectableItemBackgroundBorderless"
      android:contentDescription="@string/cancel"
      android:paddingStart="8dp"
      android:paddingEnd="8dp"
      android:src="@drawable/ic_close"
      android:tint="?colorControlNormal"
      />

  <CheckBox
      android:id="@+id/addtransfer_link_extract"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/addtransfer_link_url"
      android:layout_marginStart="20dp"
      android:layout_marginTop="12dp"
      android:layout_marginBottom="8dp"
      android:text="@string/extractwhenfinished"
      />

  <FrameLayout
      android:id="@+id/addtransfer_link_destination_holder"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/addtransfer_link_extract"
      android:layout_marginStart="24dp"
      android:layout_marginTop="12dp"
      android:layout_marginEnd="16dp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/addtransfer_link_destination_holder"
      android:layout_marginTop="8dp"
      android:gravity="end"
      android:orientation="horizontal"
      android:paddingEnd="12dp"
      android:paddingBottom="8dp"
      >

    <Button
        android:id="@+id/addtransfer_link_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        />

    <Button
        android:id="@+id/addtransfer_link_add"
        style="@style/Widget.Putio.Button.Unelevated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:text="@string/add"
        />
  </LinearLayout>
</RelativeLayout>
