<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="12dp"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingTop="@dimen/abc_dialog_padding_top_material"
        android:text="@string/downloadfinishedopentitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_downloadfinished_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="?attr/dialogPreferredPadding"
            android:layout_marginRight="?attr/dialogPreferredPadding"
            android:text="@string/downloadfinishedbody"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/buttonbar"
            style="@style/ButtonBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_filefinished_ok"
                style="@style/ButtonBar.Button.Transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                tools:ignore="ButtonOrder" />

            <Button
                android:id="@+id/button_filefinished_action"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Open" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>